--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ html {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  overflow: hidden;
 }
 
 .key {
@@ -35,6 +36,7 @@ html {
   min-height: 100vh;
   align-items: center;
   justify-content: center;
+  
 }
 kbd {
   display: block;
